# ED-1

./: ALUMNO.cpp  APUNTADORES.cpp  CMakeLists.txt  COMPLEJO.cpp  LISTA_DL.cpp  LISTA_E_ALUMNO.cpp  LISTA_E_PUNTO.cpp  LISTA_SIMPLEMENTE_LIGADA.cpp  PILA.cpp  PUNTO.cpp  README.md  RECURSIVIDAD.cpp  build.sh
include/: Alumno.hpp  Complejo.hpp  Lista_dl.hpp  Lista_e_alumno.hpp  Lista_e_punto.hpp  Lista_simplemente_ligada.hpp  Nodo.hpp  Nombre.hpp  Persona.hpp  Pila.hpp  Punto.hpp
src/: Alumno.cpp  CMakeLists.txt  Complejo.cpp  Lista_dl.cpp  Lista_e_alumno.cpp  Lista_e_punto.cpp  Lista_simplemente_ligada.cpp  Nombre.cpp  Persona.cpp  Pila.cpp  Punto.cpp
